--- a/.github/workflows/上傳.yml
+++ b/.github/workflows/上傳.yml
@@ -51,7 +51,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./
-          server-dir: /htdocs/
+          server-dir: /aimes.me/htdocs/
           exclude: |
             .git*
             **/.git*
