--- a/.github/workflows/上傳.yml
+++ b/.github/workflows/上傳.yml
@@ -65,3 +65,7 @@ jobs:
             results.txt
             compress.py
           continue-on-error: true
+
+      - name: Ping PubSubHubbub Hub
+        run: |
+          curl -d "hub.mode=publish&hub.url=https://www.aimes.me/rss.xml" https://pubsubhubbub.appspot.com/
